# masters-thesis

./: .gitignore  .gitmodules  Makefile  crate-information.json  out.xref  top_100_crates.py
code-exploration-services/code-exploration-services-lib/: Cargo.toml
code-exploration-services/code-exploration-services-lib/src/: analysis.rs  build.rs  lib.rs  parse.rs  sourcecode.rs  tests.rs
code-exploration-services/code-exploration-services-lib/src/analysis/: dir.rs  field.rs  file.rs  mod.rs
code-exploration-services/code-exploration-services-lib/src/input/: mod.rs
code-exploration-services/code-exploration-services-lib/src/input/subsystems/: mod.rs
code-exploration-services/code-exploration-services-lib/src/input/subsystems/ctags/: mod.rs  tags.rs  xref_kinds.rs  xrefs.rs
code-exploration-services/code-exploration-services-lib/src/input/subsystems/elaine/: mod.rs
code-exploration-services/code-exploration-services-lib/src/input/subsystems/lsp/: lsp_communication.rs  lsp_messages.rs  lsp_protocol.rs  mod.rs
code-exploration-services/code-exploration-services-lib/src/input/subsystems/lsp/lsp_types/: mod.rs
code-exploration-services/code-exploration-services-lib/src/input/subsystems/lsp/lsp_types/jsonrpc/: cancel_params.rs  error_codes.rs  (+12 more)
code-exploration-services/code-exploration-services-lib/src/input/subsystems/rustdoc/: mod.rs
code-exploration-services/code-exploration-services-lib/src/input/subsystems/textmate/: mod.rs
code-exploration-services/code-exploration-services-lib/src/languages/: mod.rs
code-exploration-services/code-exploration-services-lib/src/output/: mod.rs  scope_selector.rs  theme.rs  tokenize.rs
code-exploration-services/code-exploration-services-lib/src/output/html/: mod.rs
code-exploration-services/code-exploration-services-lib/src/output/latex/: codex.sty  colors.rs  mod.rs
code-exploration-services/code-exploration-services-lib/src/output/simple_html/: format.rs  generate_html.rs  mod.rs  outline.rs  script.js  style.css  themes.rs  tokenize.rs
code-exploration-services/code-exploration-services-lib/src/sources/: dir.rs  hash.rs  mod.rs  span.rs
code-exploration-services/code-exploration-services-lib/src/textmate/: mod.rs
code-exploration-services/code-exploration-services-lib/src/textmate/grammar/: mod.rs  parser.rs
code-exploration-services/code-exploration-services-lib/src/textmate/theme/: constructor.rs  mod.rs
code-exploration-services/sources/: Cargo.toml
code-exploration-services/sources/src/: children.rs  dir.rs  dir_entry.rs  file.rs  in_memory.rs  lib.rs  path.rs  root.rs
code-exploration-services/textmate/: Cargo.toml  build.rs
code-exploration-services/textmate/src/: constructor.rs  lib.rs  name.rs  parser.rs
code-exploration-services/textmate/src/grammar/: constructor.rs  mod.rs  parser.rs
code-exploration-services/textmate/src/theme/: constructor.rs  mod.rs
code-exploration-services/textmate/textmate_themes/: solarized-dark.tmTheme
(+273 files in other folders)
