[package]
name = "code-exploration-services-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.18.0"
serde = {version="1.0.154", features=["derive"]}
serde_json = "1.0.94"
sha256 = "1.1.2"
tree-sitter = "0.20.9"
thiserror = "1.0.39"
once_cell = "1.17.1"
textmate = {path="../textmate"}

[build-dependencies]
cc="1.0.79"
